--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,13 +1,29 @@
 <p id="notice"><%= notice %></p>
 
+<h2>
+	<%= @brewery.name %>
+</h2>
+
+
 <p>
-  <strong>Name:</strong>
-  <%= @brewery.name %>
+	<em>
+		Established year 
+		<%= @brewery.year %>
+	</em>
 </p>
 
 <p>
-  <strong>Year:</strong>
-  <%= @brewery.year %>
+	<strong>Number of beers:</strong>
+	<%= @brewery.beers.count %>
+</p>
+
+<p>
+	<strong>Beers: </strong>
+	<ul>
+		<% @brewery.beers.each do |beer| %>
+			<li><%= link_to beer.name, beer %></li>
+		<% end %>
+	</ul>
 </p>
 
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
