--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,19 @@
 		<%= link_to 'breweries', breweries_path %>
 		<%= link_to 'beers', beers_path %>
 		<%= link_to 'ratings', ratings_path %>
+		
+		<% if not session[:user_id].nil? %>
+			| <p><%= User.find(session[:user_id]).username %> signed in</p>
+		<% end %>
 	</div>
 
 	<%= yield %>
+	
+	<% if session[:last_rating].nil? %>
+		<p>no ratings given</p>
+	<% else %>
+		<p>previous rating: <%= session[:last_rating] %></p>
+	<% end %>
 
 </body>
 </html>
