--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,26 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Username:</strong>
-  <%= @user.username %>
+  <strong><%= @user.username %></strong>
 </p>
+
+<p>
+	has given <%= pluralize(@user.ratings.length, 'rating') %>, average <%= @user.average_rating %>
+</p>
+
+<ul>
+	<% @user.ratings.each do |rating| %>
+		<li> <%= rating %> <%= link_to 'delete', rating, :method => :delete, data: { confirm: 'Are you sure?' }  %> </li>
+	<% end %>
+</ul>
+
+Memberships
+<ul>
+	<% @user.beer_clubs.each do |club| %>
+		<li> <%= link_to club, club %> </li>
+	<% end %>
+</ul>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+
