--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,17 +10,27 @@
 
 <ul>
 	<% @user.ratings.each do |rating| %>
-		<li> <%= rating %> <%= link_to 'delete', rating, :method => :delete, data: { confirm: 'Are you sure?' }  %> </li>
+		<li> <%= rating %> 
+			<% if @user == current_user %>
+				<%= link_to 'delete', rating, :method => :delete, data: { confirm: 'Are you sure?' }  %>
+			<% end %>
+		 </li>
 	<% end %>
 </ul>
 
-Memberships
-<ul>
-	<% @user.beer_clubs.each do |club| %>
-		<li> <%= link_to club, club %> </li>
-	<% end %>
-</ul>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<% if not @user.beer_clubs.empty? %>
+	<p>
+		Belongs to:	
+		<% @user.beer_clubs.each do |club| %>
+			<%= link_to club, club %> 
+		<% end %>
+	</p>
+<% end %>
+
+<% if true %>
+	<%= link_to 'Edit', edit_user_path(@user) %>
+	<%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
 <%= link_to 'Back', users_path %>
 
