--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
 	</p>
 <% end %>
 
-<% if true %>
+<% if currently_signed_in? @user %>
 	<%= link_to 'Edit', edit_user_path(@user) %>
 	<%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
