cabybara gem and ex5

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,8 +30,8 @@
 
 <% if not @user.favorite_beer.nil? %>
 	<p>
-		Favorite beer:	
-		<%= @user.favorite_beer %>
+		Favorite brewery:	
+		<%= @user.favorite_brewery %>
 	</p>
 <% end %>
 
