--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,6 +30,14 @@
 
 <% if not @user.favorite_beer.nil? %>
 	<p>
+		Favorite beer:	
+		<%= @user.favorite_beer %>
+	</p>
+	<p>
+		Favorite style:	
+		<%= @user.favorite_style %>
+	</p>
+	<p>
 		Favorite brewery:	
 		<%= @user.favorite_brewery %>
 	</p>
