--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -33,5 +33,5 @@
 	</p>
 <% end %>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
+<%= link_to 'Edit', edit_brewery_path(@brewery) if current_user %>
 <%= link_to 'Back', breweries_path %>
