--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -25,5 +25,5 @@
 	</ul>
 </p>
 
-<%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
+<%= link_to 'Edit', edit_beer_club_path(@beer_club) if current_user %>
 <%= link_to 'Back', beer_clubs_path %>
