--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,5 +1,9 @@
+<p id="notice"><%= notice %></p>
+
+
 <h1>Listing breweries</h1>
 <p> Number of breweries: <%= @breweries.count %> </p> 
+
 
 <table>
   <thead>
