--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -23,5 +23,13 @@
 	<% end %>
 </p>
 
+
+<h4>give a rating:</h4>
+	<%= form_for(@rating) do |f| %>
+		<%= f.hidden_field :beer_id %>
+		score: <%= f.number_field :score %>
+	<%= f.submit %>
+<% end %>
+
 <%= link_to 'Edit', edit_beer_path(@beer) if current_user %>
 <%= link_to 'Back', beers_path %>
