--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :beer_club_id, "Beer club" %><br>
-    <%= f.select :beer_club_id, options_from_collection_for_select(@beer_clubs, :id, :to_s) %>
+    <%= f.select :beer_club_id, options_from_collection_for_select(@beer_clubs, :id, :to_s, :selected => @membership.beer_club_id) %>
   </div>
   <div class="actions">
     <%= f.submit %>
