--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -29,4 +29,4 @@
 
 <br>
 
-<% link_to 'New Brewery', new_brewery_path if current_user %>
+<%= link_to 'New Brewery', new_brewery_path if current_user %>
