--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -3,11 +3,11 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Style</th>
-      <th>Brewery</th>
-      <th></th>
-      <th></th>
+		<th> <%= link_to 'Name', beers_path(:order => "name") %> </th>
+		<th> <%= link_to 'Style', beers_path(:order => "style") %> </th>
+		<th> <%= link_to 'Brewery', beers_path(:order => "brewery") %> </th>
+		<th></th>
+		<th></th>
     </tr>
   </thead>
 
