--- a/app/views/beers/edit.html.erb
+++ b/app/views/beers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @beer %> |
-<%= link_to 'Back', beers_path %>
+<%= link_to 'Show', @beer, class: 'btn' %>
+<%= link_to 'Back', beers_path, class: 'btn' %>
