--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,32 +1,20 @@
 <p id="notice"><%= notice %></p>
 
 
-<h1>Listing breweries</h1>
-<p> Number of breweries: <%= @breweries.count %> </p> 
+<h1>Breweries</h1>
 
 
-<table>
-  <thead>
-    <tr>
-      <th> <%= link_to 'Name', breweries_path(:order => "name") %> </th>
-      <th> <%= link_to 'Year', breweries_path(:order => "year") %> </th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<h2>Active</h2>
+<p> Number of active breweries: <%= @active_breweries.count %> </p> 
 
-  <tbody>
-    <% @breweries.each do |brewery| %>
-      <tr>
-        <td><%= link_to brewery.name, brewery %></td>
-        <td><%= brewery.year %></td>
-        <td><%= link_to 'Edit', edit_brewery_path(brewery) if current_user %></td>
-        <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } if current_user %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'list', :breweries => @active_breweries %>
+
+
+<h2>Retired</h2>
+<p> Number of retired breweries: <%= @retired_breweries.count %> </p> 
+
+<%= render 'list', :breweries => @retired_breweries %>
 
 <br>
 
-<%= link_to 'New Brewery', new_brewery_path if current_user %>
+<%= link_to 'New Brewery', new_brewery_path, class: 'btn btn-primary' if current_user %>
