--- a/app/views/layouts/_main_navi.html.erb
+++ b/app/views/layouts/_main_navi.html.erb
@@ -1,19 +1,40 @@
-<%= link_to 'breweries', breweries_path %>
-<%= link_to 'beers', beers_path %>
-<%= link_to 'styles', styles_path %>
-<%= link_to 'ratings', ratings_path %>
-<%= link_to 'users', users_path %>
-<%= link_to 'beer clubs', beer_clubs_path %>
-<%= link_to 'places', places_path %>
-|
-<% if current_user.nil? %>
-	<%= link_to 'signin', signin_path %>
-	<%= link_to 'signup', signup_path %>
-<% else %>
-  <%= link_to current_user.username, current_user %>
-  <%= link_to 'rate a beer', new_rating_path %>
-  <%= link_to 'join a club', new_membership_path %>
-  <%= link_to 'signout', signout_path, :method => :delete %>
-<% end %>
-
-
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">Ratebeer</a>
+      <div class="nav-collapse">
+        <ul class="nav">
+          <li><%= link_to 'breweries', breweries_path %></li>
+          <li><%= link_to 'beers', beers_path %></li>
+          <li><%= link_to 'styles', styles_path %></li>          
+          <li><%= link_to 'ratings', ratings_path %></li>
+          <li><%= link_to 'users', users_path %></li>
+          <li><%= link_to 'clubs', beer_clubs_path %></li>
+          <li><%= link_to 'places', places_path %></li>
+          <% if current_user.nil? %>
+              <li><%= link_to 'signin', signin_path %></li>
+              <li><%= link_to 'signup', signup_path %></li>
+          <% else %>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					<%= current_user %>
+					<b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+					<li><%= link_to "my page", current_user %></li>
+					<li><%= link_to "rate a beer", new_rating_path %></li>
+					<li><%= link_to "join a club", new_membership_path %></li>
+					<li><%= link_to "signout", signout_path, :method => :delete%></li>
+				</ul>
+			</li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
