--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,12 +1,10 @@
 <h1>Listing memberships</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Beer club</th>
       <th>User</th>
-      <th></th>
-      <th></th>
       <th></th>
     </tr>
   </thead>
@@ -17,8 +15,6 @@
         <td><%= membership.beer_club_id %></td>
         <td><%= membership.user_id %></td>
         <td><%= link_to 'Show', membership %></td>
-        <td><%= link_to 'Edit', edit_membership_path(membership) %></td>
-        <td><%= link_to 'Destroy', membership, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Membership', new_membership_path %>
+<%= link_to 'New Membership', new_membership_path, class: 'btn btn-primary' %>
