--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -18,8 +18,8 @@
     <%= f.select :beer_club_id, options_from_collection_for_select(@beer_clubs, :id, :to_s, :selected => @membership.beer_club_id) %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
 
-<%= link_to 'Back', memberships_path %>
+<%= link_to 'Back', memberships_path, class: 'btn' %>
