--- a/app/views/ratings/_list.html.erb
+++ b/app/views/ratings/_list.html.erb
@@ -1,5 +1,5 @@
 <ul>
-	<% @ratings.each do |rating| %>
+	<% ratings.each do |rating| %>
 		<li> <%= rating %> - given by <%= link_to rating.user, rating.user %> </li>
 	<% end %>
 </ul>
