--- a/app/views/styles/edit.html.erb
+++ b/app/views/styles/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @style %> |
-<%= link_to 'Back', styles_path %>
+<%= link_to 'Show', @style, class: 'btn' %>
+<%= link_to 'Back', styles_path, class: 'btn' %>
