--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,10 +1,8 @@
-<h1>Listing styles</h1>
+<h1>Beer Styles</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th></th>
       <th></th>
     </tr>
   </thead>
@@ -13,8 +11,6 @@
     <% @styles.each do |style| %>
       <tr>
         <td><%= link_to style.name, style_path(style) %></td>
-        <td><%= link_to 'Edit', edit_style_path(style) if current_user %></td>
-        <td><%= link_to 'Destroy', style, method: :delete, data: { confirm: 'Are you sure?' } if current_user %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +18,4 @@
 
 <br>
 
-<%= link_to 'New Style', new_style_path if current_user %>
+<%= link_to 'New Style', new_style_path, class: 'btn btn-primary' if current_user %>
